email fix in production